syntax = "proto3";
option csharp_namespace = "Neuro.Recording.Common";

import "Recording/Common/Vector2.proto";

message PositionData {
    float TotalDistance = 1;
    Vector2 NextNodePosition = 2;
    Vector2 NextNodeOffset = 3;
}
