syntax = "proto3";
option csharp_namespace = "Neuro.Recording.Common";

message Vector2 {
    float X = 1;
    float Y = 2;
}
